[package]
name = "concentrate"
version = "0.2.8"
edition = "2018"
authors = ["Jay Kickliter <jay@kickliter.com>", "Louis Thiery <louis@helium.com>"]

[dependencies]
log = "0.4.6"
longfi-hotspot = { path = "longfi-hotspot" }
loragw = { path = "loragw" }
messages = { path = "messages" }
mio = "0.6"
mio-extras = "1.0"
protobuf = "2.5.0"
quick-error = "1.2.2"
rand = "0.3"
serde = { version = "1.0", features = ["derive"] }
structopt = "0.2.15"
toml = "=0.5.0"
env_logger = "0.6.1"
syslog = "4"
log-panics = "2"

# NOTE: configuring concentrate's hardware support (SX1301
# v.s. SX1302) is not ideal. In fact, it's pretty horrible. Ideally,
# we'd be able to link both `libloragw` `-sys` crates at the same
# time, but we're prevented due to c linkgage and the external
# libraries' ecessive use of non fake-namespaced c globals. We still
# have other options, and will revisit those options in the future.
[features]
sx1301  = ["loragw/sx1301"]
sx1302  = ["loragw/sx1302"]

[workspace]
members = [
"libloragw-sx1301-sys",
"libloragw-sx1302-sys",
"longfi-hotspot",
"loragw",
"messages",
]
