[package]
name = "concentrate"
version = "0.1.9"
authors = ["Jay Kickliter <jay@kickliter.com>"]

[dependencies]
colored = "1.8"
log = "0.4.6"
loragw = { path = "../loragw" }
messages = { path = "../messages" }
protobuf = "2.5.0"
quick-error = "1.2.2"
serde = { version = "1.0", features = ["derive"] }
structopt = "0.2.15"
toml = "=0.5.0"
byteorder = "1"

[dependencies.syslog]
version = "4"
optional = true

[dependencies.env_logger]
version = "0.6.1"
optional = true

[dependencies.log-panics]
version = "2.0.0"
optional = true

[features]
default = ["log_sys"]
log_env = ["env_logger", "log-panics"]
log_sys = ["syslog", "log-panics"]
