[package]
name = "messages"
version = "0.1.0"
edition = "2018"
authors = ["Jay Kickliter <jay@kickliter.com>"]
readme = "README.md"
homepage = "https://github.com/helium/concentrate"
repository = "https://github.com/helium/concentrate"

[dependencies]
protobuf = "2.5.0"
loragw = { path = "../loragw" }

[build-dependencies]
protobuf-codegen-pure = "2.5.0"
